----------------------------------------------------------------------
 OmegaT 3.5.2 update 2 
----------------------------------------------------------------------
   6 Enhancements
   2 Bug fixes
   1 Localisation update
----------------------------------------------------------------------
3.5.2 update 2 vs 3.5.2 update 1

  Implemented requests:  

  - Add sentence case to Shift+F3 case change 
  https://sourceforge.net/p/omegat/feature-requests/1134/

  - Improve glossary matching of terms containing numbers
  https://sourceforge.net/p/omegat/feature-requests/1138/

  - Allow suppressing MT retrieval for translated segments
  https://sourceforge.net/p/omegat/feature-requests/1137/

  - Ctrl-M manual call of MT on translated segments
  https://sourceforge.net/p/omegat/feature-requests/1140/

  Other changes:

  - Mac OS X: It is now possible to make the project files list 
"truly" full-screen. On OS X 10.11 this means you can have the main 
window and the project files window open side-by-side in split view.

  - spellcheck.groovy has a new option to ignore segments where 
source=target

  Bug fixes:

  - Spell Checking issue with a Turkish character 
  https://sourceforge.net/p/omegat/bugs/771/

  - Tag validation could wrongly mention bad nesting for custom tags.
Tag nesting is now only tested for OmegaT tags.

  Localisation Updates:

 - German localisation updated to 3.5.2 (UI)

----------------------------------------------------------------------
 OmegaT 3.5.2 update 1 (2015-09-25)
----------------------------------------------------------------------
   0 Enhancement
   3 Bug fixes
   0 Localisation update
----------------------------------------------------------------------
3.5.2 update 1 vs 3.5.2

  Bug fixes:

  - No dictionaries show up in the Spellchecker Setup window 
  https://sourceforge.net/p/omegat/bugs/766/

  - Fails to buid OmegaT users guide on Linux 
  https://sourceforge.net/p/omegat/bugs/769/
